Refactored LotteryService to improve draw logic and introduced helper classes for validation and prize stock management